Agrego solicitud de leer archivos